Wrap up of code, and fixing of last bugs

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,13 +7,18 @@ body {
     color:
     #36a5db;
 }
+
+.title {
+    max-width: 500px;
+}
 .wrapper {
-    max-width: 100%;
-    height:100vh;
+    width: 100%;
+    height:100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     margin: 0 auto;
+    padding: 40px;
 }
 h1 {
     font-size: 2em;
@@ -38,8 +43,8 @@ h1 {
     background-color:#90cdeb ;
 }
 .game {
-width: 500px;
-height: 500px;
+width: 31em;
+height: 31em;
 display: flex;
 flex-direction: column;
 }
@@ -145,4 +150,35 @@ flex-direction: column;
 img {
     width: 100%;
     height: auto;
+}
+
+
+.close {
+    position: absolute;
+    right: 7px;
+    top: 0px;
+    font-size: larger;
+    color: rgb(187, 18, 18);
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+@media screen and  (max-width: 964px){
+    .wrapper {
+        flex-direction: column;
+    }
+
+    .game {
+        width: 300px;
+        height: 300px;
+    }
+    .left {
+        margin-top: 26px;
+        margin-left: 40px;
+    }
+    .right{
+        margin-top: 60px;
+    }
+
+    
 }
